<resources>
    <string name="app_name">İdeal Kilo</string>
    <string name="bay">Bay</string>
    <string name="bayan">Bayan</string>
    <string name="boy_tv">Boyunuz</string>
    <string name="kilo_tv">Kilonuz</string>
    <string name="cinsiyet">Cinsiyet</string>
    <string name="ideal_kilo_tv">İdeal Kilo</string>
    <string name="durum">Durum</string>
    <string name="zayif">Zayıf durumdasınız.</string>
    <string name="ideal">İdeal kilodasınız.</string>
    <string name="normalden_fazla">Normal kilodan fazla.</string>
    <string name="fazla_kilolu">Faza kilo.</string>
    <string name="obez">Obez durumdasınız.</string>
    <string name="doktora">Doktor tedavisine ihtiyaç var.</string>
    <string name="turkısh">Türkçe</string>
    <string name="close">Kapat</string>
    <string name="english">İngilizce</string>
    <string name="language_selection_screen">Dil Seçim Ekranı</string>
    <string name="locale">tr</string>
    <string name="erkek">Erkek</string>
    <string name="kadin">Kadın</string>
    <string name="kilonuzu_giriniz">kilonuzu giriniz</string>
    <string name="boyunuzu_giriniz">boyunuzu giriniz</string>
    <string name="dil_secimi">dil seçimi</string>
    <string name="vucut_kitle_endeksi">Vücut Kitle İndeksi</string>
    <string name="sonuc">Sonucunuz burada yer alacak</string>
    <string name="hesapla">Hesapla</string>
    <string name="ideal_kilo_alti">İdeal Kilonun Altındasınız.</string>
    <string name="ideal_kilo">İdeal Kilodasınız.</string>
    <string name="ideal_kilo_ustu">İdeal Kilonun üzerindesiniz.</string>
    <string name="obezite">İdeal Kilonun çok üzerindesiniz.</string>
    <string name="ideal_kilo_alti_oneri">İdeal kilonun altında kalmışsın ama yükselmen için yanındayız! Tek ihtiyacın biraz motivasyon biraz da düzenli ve dengeli beslenme. Biz de tam bunun için varız! Bizi takip et, senin için tüyolarımız var; birlikte başarabiliriz!</string>
    <string name="ideal_kilo_oneri">Harikasın! Tam da ideal kilondasın! Şimdi sana düşen bunu korumak. Hareketi ihmal etmeden, düzenli ve dengeli beslenmeye ve bizi takip etmeye devam!</string>
    <string name="ideal_kilo_ustu_oneri">Hedefe yakınsın! Önünde kısa bir yol var. Dengeli beslenme ve düzenli fiziksel aktivite ile tam 12\'den en ideali vurabilirsin!</string>
    <string name="obezite_oneri">İdeal kilonu biraz uzakta bırakmışsın ama güzel bir haberimiz var; ona kavuşmak sandığın kadar zor değil. Her şey kararlı ve motive olmakla başlıyor, asla pes etme ve motivasyonunu yüksek tut, hareket ve dengeli beslenme hayatının bir parçası olduğunda değişimin hızına sen bile inanamayacaksın. Motivasyonu yüksek tutup, dengeli ve düzenli beslenmeye dikkat edip, hareketi artırarak umduğunuzdan bile kolay olacak. İhtiyacınız olan her şey, okunmak üzere burada sizi bekliyor! Haydi ilk iş olarak biraz ilham al ve harekete geç!</string>
    <string name="sonuc_ekrani">Geçmiş Sonuçlar</string>
</resources>
