<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/dil_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:background="@drawable/ic_translation"
            android:text="TextView" />

        <TextView
            android:id="@+id/baslik_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="16dp"
            android:text="@string/vucut_kitle_endeksi"
            android:textColor="@color/white"
            android:textSize="22sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/include"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <include layout="@layout/checkbox_list" />
    </LinearLayout>


    <TextView
        android:id="@+id/boyunuz_baslik_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/boy_tv"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="@+id/include"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <EditText
        android:id="@+id/boy_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/boyunuzu_giriniz"
        android:inputType="number"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/boyunuz_baslik_tv"
        app:layout_constraintEnd_toEndOf="@+id/include"
        app:layout_constraintStart_toEndOf="@+id/boyunuz_baslik_tv"
        app:layout_constraintTop_toTopOf="@+id/boyunuz_baslik_tv" />

    <TextView
        android:id="@+id/kilonuz_baslik_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/kilo_tv"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="@+id/boyunuz_baslik_tv"
        app:layout_constraintTop_toBottomOf="@+id/boyunuz_baslik_tv" />

    <EditText
        android:id="@+id/kilo_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/kilonuzu_giriniz"
        android:inputType="number"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/kilonuz_baslik_tv"
        app:layout_constraintEnd_toEndOf="@+id/boy_et"
        app:layout_constraintStart_toStartOf="@+id/boy_et"
        app:layout_constraintTop_toTopOf="@+id/kilonuz_baslik_tv" />

    <LinearLayout
        android:id="@+id/hesapla_btn_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textColor="@color/white"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/kilo_et"
        app:layout_constraintStart_toStartOf="@+id/kilonuz_baslik_tv"
        app:layout_constraintTop_toBottomOf="@+id/kilonuz_baslik_tv">

        <Button
            android:id="@+id/hesapla_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hesapla"
            android:layout_weight="1"
            android:layout_marginRight="16dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/sonuc_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sonuc_ekrani"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:textColor="@color/white" />

    </LinearLayout>
    <TextView
        android:id="@+id/sonuc_tv"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/sonuc"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/hesapla_btn_container"
        app:layout_constraintStart_toStartOf="@+id/hesapla_btn_container"
        app:layout_constraintTop_toBottomOf="@+id/hesapla_btn_container" />

    <ScrollView
        android:id="@+id/oneri_scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fitsSystemWindows="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sonuc_tv">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/oneri_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>