<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:background="@drawable/shadow_rectangle_1"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/cinsiyet_baslik_tv"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cinsiyet"
            android:textColor="@color/colorPrimary" />

        <ImageView
            app:layout_constraintBottom_toBottomOf="@+id/cinsiyet_baslik_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cinsiyet_baslik_tv"
            app:layout_constraintTop_toTopOf="@+id/cinsiyet_baslik_tv"
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_marginStart="4dp"
            android:alpha="0.7"
            android:background="@drawable/shadow_rectangle"
            android:translationZ="2dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/erkek_baslik_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/erkek_checkbox"
                android:text="@string/erkek"
                android:textColor="@color/colorPrimary" />

            <CheckBox
                android:id="@+id/erkek_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:buttonTint="@color/colorPrimary" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/kadin_baslik_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/kadin_checkbox"
                android:text="@string/kadin"
                android:textColor="@color/colorPrimary" />

            <CheckBox
                android:id="@+id/kadin_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:buttonTint="@color/colorPrimary" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>